Adding first HTML Page with Hello World Message in new Project.

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello World</title>
+    <title>Hello World!</title>
 </head>
 <body>
-Hello World from Danny Velis! This is my first HTLM Page.
+Hello World from Nelson Velis! This is my first HTML Page.
 </body>
 </html>
