learning the flasks fundamentals

--- a/templates/about.html
+++ b/templates/about.html
@@ -46,7 +46,62 @@
                 </tr>
             </table>
             <p>A link to the <a href="/hello">hello page</a></p>
+            <!-- This is an awesome feature.-<!DOCTYPE html>
+<html lang="en">
+    <head>
+    <meta charset="UTF-8">
+        <title>Nelson Daniel Velis</title>
+    </head>
+    <body>
+        <p> Here is a picture of the Smith Logo</p>
+        <img src="https://terpconnect.umd.edu/~jbono/bmgt407/images/smith-logo.png" width="267" height="72" alt="Smith Logo"/>
+        <h1>Information</h1>
+        <p> This website will be about me, <strong> <em>"Danny"</em></strong>. I'm very excited to learn HTML and be able to have real
+        world experience and skills.</p>
+        <h2>Work Life</h2>
+        <p> I work at <strong> <em> SMITH IT!</em></strong></p>
+        <p> Places I have worked at:</p>
+
+        <ul>
+            <li>PwC</li>
+            <li>Joshua Painting</li>
+        </ul>
+
+        <h2>School Life</h2>
+        <p> Places I studied at:</p>
+        <ol>
+            <li>Mercyhurst University</li>
+            <!-- Best two years of my life at this school. Definitely miss it. -->
+            <li>University of Maryland</li>
+        </ol>
+            <table>
+                <tr>
+                    <th> Course </th>
+                    <th> Semester Taken</th>
+                </tr>
+                <tr>
+                    <td> BMGT403</td>
+                    <td> Fall 2022</td>
+                </tr>
+                <tr>
+                    <td> BMGT484</td>
+                    <td> Fall 2022</td>
+                    <!-- I wished I payed attention to this class-->
+                </tr>
+                <tr>
+                    <td>AREC200</td>
+                    <td>Fall 2021</td>
+                </tr>
+            </table>
+            <p>A link to the <a href="/hello">hello page</a></p>
             <!-- This is an awesome feature.-->
+            <p>A link to my favorite soccer news website,<a href="https://www.goal.com/en-us" target="_blank">GOAL</a> </p>
+             <p>A link to my favorite team in the world, <a href="https://www.arsenal.com">Arsenal</a> </p>
+
+
+
+    </body>
+</html>->
             <p>A link to my favorite soccer news website,<a href="https://www.goal.com/en-us" target="_blank">GOAL</a> </p>
              <p>A link to my favorite team in the world, <a href="https://www.arsenal.com">Arsenal</a> </p>
 
