Learning Flask Fundamentals

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 {% block page_title %} WELCOME{% endblock %}
-
 {% block page_content %}
       <div class="container">
       <h2>Enter information down below</h2>
@@ -37,7 +36,7 @@
     <form action="{{ url_for('contact') }}" method="POST">
   <div class="mb-3">
     <label for="email" class="form-label">Email address</label>
-    <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email">
+    <input type="email" class="form-control" id="email" name="email">
   </div>
   <div class="mb-3">
     <label for="first_name" class="form-label">First Name</label>
