Learning Flask Fundamentals

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block page_title %} WELCOME{% endblock %}
+{%block page_head %} Thank you for your time!{% endblock %}
 {% block page_content %}
       <div class="container">
       <h2>Enter information down below</h2>
