--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,11 +3,8 @@
 {%block page_head %}Hello!{% endblock %}
 {% block page_content %}
       <div class="container">
-      <h2>Enter information down below</h2>
+      <h2>Thank you for your time!</h2>
           {% if form_submitted %}
-          <div class="col-12">
-              <h2>Thank you for completing my form!</h2>
-          </div>
           <div class="col-md-6">
               <p> First Name:</p>
           </div>
