We are adding Flask Authentication and Authorization with our users and also adding training URL

--- a/templates/training.html
+++ b/templates/training.html
@@ -4,7 +4,11 @@
 {% endblock %}
 
 {% block page_head %}
-     Welcome to your training for the TerpSys Student Information System. Training materials are currently under construction,
+{% endblock %}
+{% block page_content %}
+    <p> Welcome to your training for the TerpSys Student Information System. Training materials are currently under construction,
     but will be created very soon.Please check back soon or email Danny at <a href="nvelis@umd.edu">nvelis@umd.edu</a> if
-    you wish to be placed on the waiting list.
+        you wish to be placed on the waiting list.</p>
+
+
 {% endblock %}
