--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                         {% endif %}
                         {% if current_user.role in ['ADMIN', 'MANAGER'] %}
                         <li class="nav-item">
-                          <a id="training" class="nav-link {% if request.endpoint=='student_view_all' %}active{%endif %}" href="{{ url_for('training') }}">Training</a>
+                          <a id="training" class="nav-link {% if request.endpoint=='training' %}active{%endif %}" href="{{ url_for('training') }}">Training</a>
                         </li>
                         {% endif %}
                     </ul>
