--- a/templates/training.html
+++ b/templates/training.html
@@ -4,6 +4,7 @@
 {% endblock %}
 
 {% block page_head %}
+    Training
 {% endblock %}
 {% block page_content %}
     <p> Welcome to your training for the TerpSys Student Information System. Training materials are currently under construction,
